Fix renaming and deletion of memberMap members.

The methods renameItem, renameGroup and deleteItem in MemberMap
inadvertingly operated on a copy of the member item set instead of the
real data.

This issue was introduced in commit 8d0b178e8 and is present since
release 4.7.

BUG: 376635